--- a/css/estilos.css
+++ b/css/estilos.css
@@ -325,11 +325,10 @@
     top: 0; } }
 
 .fechas {
-  background-image: url(../multimedia/goyo-20.jpg);
+  background-image: url(../multimedia/fondo-fechas.jpg);
   background-attachment: fixed;
   background-size: cover;
-  background-position-y: -2rem;
-  background-size: 100vh;
+  background-position: center;
   height: 100%; }
   .fechas .row {
     background-color: rgba(37, 41, 39, 0.5);
