--- a/scss/_fechas.scss
+++ b/scss/_fechas.scss
@@ -1,9 +1,8 @@
 .fechas{
-    background-image: url(../multimedia/goyo-20.jpg);
+    background-image: url(../multimedia/fondo-fechas.jpg);
     background-attachment: fixed;
     background-size: cover;
-    background-position-y: -2rem;
-    background-size: 100vh;
+    background-position: center;
     height: 100%;
     .row{
         background-color: rgba(37, 41, 39, 0.5);
